code imporvements, clearify projectIdentifiers for CBOM read model, some small ui updates
Signed-off-by: Nicklas Körtge <nicklas.koertge1@ibm.com>